# its-a-dt

./: .gitignore  LICENSE  README.md  development.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
src/datepicker/: __init__.py  compose.py  demo.py  pick_day.py  pick_month.py  pick_time.py  pick_year.py
src/its_a_dt/: __init__.py  bounds.py  compose.py  demo.py  pick_day.py  pick_month.py  pick_time.py  pick_year.py  screen.py
tests/: test_bounds.py  test_defaults.py  test_picker_keys.py
