[project]
name = "datepicker"
version = "0.1.0"
description = "Interactive terminal date and time picker for Typer CLIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "prompt-toolkit>=3.0.0",
    "typer>=0.12.0",
]

[project.scripts]
datepicker-demo = "datepicker.demo:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
